# MGSPICO3z

./: LICENSE  README.md
RasPiPico/: CMakeLists.txt
RasPiPico/harzlib/: CMakeLists.txt  build.cmd  hartplay.z80  harzbios.z80  harzlib.h  msxbios.inc
RasPiPico/mgspico3z/: CMakeLists.txt  CMsCount.cpp  CMsCount.h  CReadFileStream.cpp  CReadFileStream.h  IStreamPlayer.h  MgspicoSettings.cpp  MgspicoSettings.h  def_gpio.h  for_debug.h  global.cpp  global.h  if_harz80.h  mgspico.h  mgspico3z.cpp  t_mmmspi.cpp  t_mmmspi.h  t_si5351.cpp
RasPiPico/mgspico3z/ff/: mmc_pico_spi.c
RasPiPico/mgspico3z/harz80/: CHarz80Ctrl.cpp  CHarz80Ctrl.h
RasPiPico/mgspico3z/mgs/: MusFiles.cpp  MusFiles.h
RasPiPico/mgspico3z/oled/: oledssd1306.cpp  oledssd1306.h
RasPiPico/mgspico3z/tgf/: CTgfPlayer.cpp  CTgfPlayer.h
RasPiPico/mgspico3z/vgm/: CVgmPlayer.cpp  CVgmPlayer.h
TangNano9K/: HALMEM.gprj  HALMEM_TangNano9k.code-workspace
TangNano9K/impl/: HALMEM_process_config.json
TangNano9K/src/: HALMEM.cst  HALMEM.rao  HALMEM.sdc  HALMEM.sv  HALMEM_fifo.v  TXWKRAM.sv  defines.svh  if_harz80.svh
TangNano9K/src/IKASCC/: IKASCC.v  IKASCC_defines.vh
TangNano9K/src/IKASCC/IKASCC_modules/: IKASCC_player_a.v  IKASCC_player_s.v  IKASCC_primitives.v  (+2 more)
TangNano9K/src/gowin_clkdiv/: gowin_clkdiv_35.ipc  gowin_clkdiv_35.mod  gowin_clkdiv_35.v  gowin_clkdiv_35_tmp.v
TangNano9K/src/gowin_clkdiv_4/: gowin_clkdiv_4.ipc  gowin_clkdiv_4.mod  gowin_clkdiv_4.v  gowin_clkdiv_4_tmp.v
TangNano9K/src/gowin_dqce/: gowin_dqce.mod  gowin_dqce.v  gowin_dqce_tmp.v
TangNano9K/src/gowin_osc/: gowin_osc.mod  gowin_osc.v  gowin_osc_tmp.v
TangNano9K/src/gowin_rpll_x20p/: gowin_rpll_x20p.ipc  gowin_rpll_x20p.mod  gowin_rpll_x20p.v  gowin_rpll_x20p_tmp.v
TangNano9K/src/gowin_rpllx2/: gowin_rpllx2.ipc  gowin_rpllx2.mod  gowin_rpllx2.v  gowin_rpllx2_tmp.v
TangNano9K/src/gowin_rpllxv2/: gowin_rpllxv2.ipc  gowin_rpllxv2.mod  gowin_rpllxv2.v  gowin_rpllxv2_tmp.v
TangNano9K/src/mmp/: MMP_cdc.v  MMP_dac.v
TangNano9K/src/msxsys/: BasicSlotUnit.sv  FmBiosUnit.sv  HalZMMU.sv  Ram16kUnit.sv
TangNano9K/src/psram/: PsramAccessMUX.sv  PsramAccessMUX.svh  PsramController.sv  PsramController.svh
TangNano9K/src/spdif_tx/: spdif_tx.vo  spdif_tx_tmp.v
TangNano9K/src/tv80/: tv80_alu.v  tv80_core.v
(+9 files in other folders)
